Create initial website.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
         <meta name="description" content="Hellx2.github.io" />
         <meta name="author" content="Hellx2" />
         <title>Hellx2</title>
+        <link rel="stylesheet" href="index.css" />
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <nav>
+            <span id="title">Hellx2</span>
+            <button id="home" onclick="window.open('index.html', '_self')">
+                Home
+            </button>
+            <button id="repos" onclick="window.open('repos.html', '_self')">
+                Repos
+            </button>
+        </nav>
+        <div id="main">
+            <h1>Hellx2</h1>
+        </div>
+        <div id="main2">
+            <h2>Hi</h2>
+        </div>
     </body>
 </html>
