--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <body>
         <nav>
             <span id="title">Hellx2</span>
-            <button id="home" onclick="window.open('index.html', '_self')">
+            <button
+                id="home"
+                onclick="window.open('https://hellx2.github.io', '_self')"
+            >
                 Home
             </button>
             <button id="repos" onclick="window.open('repos.html', '_self')">
