Update to make style consistent between screen sizes.

--- a/repos.html
+++ b/repos.html
@@ -21,12 +21,7 @@
     <body>
         <nav>
             <span id="title">Hellx2</span>
-            <button
-                id="home"
-                onclick="window.open('https://hellx2.github.io', '_self')"
-            >
-                Home
-            </button>
+            <button id="home" onclick="window.open('./', '_self')">Home</button>
             <button id="repos" onclick="window.open('repos.html', '_self')">
                 Repos
             </button>
